--- a/InlineBallutes/Patches/RealChute.cfg
+++ b/InlineBallutes/Patches/RealChute.cfg
@@ -18,7 +18,7 @@ MATERIAL
 	MODULE
 	{
 		name = RealChuteModule
-		caseMass = #$/../mass$
+		caseMass = #$/mass$
 		@caseMass *= .82 //caseMass of 1 in example is one half mass of 2.5 meter part. assuming this is desired relative mass of casemass.
 		timer = 0
 		mustGoDown = false
